--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">KotlinTest</string>
     <string name="main_endpoint">http://api.themoviedb.org</string>
     <string name="message_exit_from_app">Please click back again to exit</string>
+    <string name="loading_title">Loading</string>
 </resources>
